INCLUDE_DIRECTORIES(${k3d_SOURCE_DIR})
INCLUDE_DIRECTORIES(${k3d_BINARY_DIR})
INCLUDE_DIRECTORIES(${K3D_BOOST_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(${K3D_SIGC_INCLUDE_DIRS})

LINK_DIRECTORIES(${K3D_BOOST_LIB_DIRS})
LINK_DIRECTORIES(${K3D_SIGC_LIB_DIRS})

K3D_BUILD_UI_MODULE(k3d-nui)

TARGET_LINK_LIBRARIES(k3d-nui k3dsdk)
TARGET_LINK_LIBRARIES(k3d-nui ${K3D_BOOST_PROGRAM_OPTIONS_LIBS})

