PROJECT(k3d-resource-compiler)

INCLUDE_DIRECTORIES(
	${Boost_INCLUDE_DIRS}
	)

ADD_EXECUTABLE(k3d-resource-compiler
	main.cpp
	)

SET_TARGET_PROPERTIES(k3d-resource-compiler PROPERTIES
  RUNTIME_OUTPUT_DIRECTORY ${K3D_RUNTIME_OUTPUT_DIRECTORY}
  )

TARGET_LINK_LIBRARIES(k3d-resource-compiler
	${Boost_PROGRAM_OPTIONS_LIBRARY}
	)

