PROJECT(share)

FUNCTION(INSTALL_GLOB PATTERN TARGET)
	FILE(GLOB FILE_LIST ${PATTERN})
	INSTALL(FILES ${FILE_LIST} DESTINATION ${TARGET})
ENDFUNCTION()

INSTALL_GLOB(*.k3d share/k3d)

ADD_SUBDIRECTORY(documents)
ADD_SUBDIRECTORY(fonts)
ADD_SUBDIRECTORY(geometry)
ADD_SUBDIRECTORY(icons)
ADD_SUBDIRECTORY(logo)
ADD_SUBDIRECTORY(lsystem)
ADD_SUBDIRECTORY(ngui)
ADD_SUBDIRECTORY(scripts)
ADD_SUBDIRECTORY(shaders)
ADD_SUBDIRECTORY(textures)

