PROJECT(share)

FUNCTION(K3D_SHARE_INSTALL PATTERN TARGET)
	FILE(GLOB FILE_LIST ${PATTERN})

	FILE(MAKE_DIRECTORY ${K3D_SHARE_OUTPUT_DIRECTORY}/${TARGET})
	FOREACH(FILE ${FILE_LIST})
		CONFIGURE_FILE(${FILE} ${K3D_SHARE_OUTPUT_DIRECTORY}/${TARGET} COPYONLY)
	ENDFOREACH()

	INSTALL(FILES ${FILE_LIST} DESTINATION share/k3d/${TARGET})
ENDFUNCTION()

K3D_SHARE_INSTALL(*.k3d "")

ADD_SUBDIRECTORY(documents)
ADD_SUBDIRECTORY(fonts)
ADD_SUBDIRECTORY(geometry)
ADD_SUBDIRECTORY(icons)
ADD_SUBDIRECTORY(logo)
ADD_SUBDIRECTORY(lsystem)
ADD_SUBDIRECTORY(ngui)
ADD_SUBDIRECTORY(qtui)
ADD_SUBDIRECTORY(scripts)
ADD_SUBDIRECTORY(shaders)
ADD_SUBDIRECTORY(textures)

