PROJECT(k3dsdk-subdivision-surface)

FILE(GLOB HEADERS *.h)
FILE(GLOB SOURCES *.cpp)

INCLUDE_DIRECTORIES(${k3d_SOURCE_DIR})
INCLUDE_DIRECTORIES(${K3D_BOOST_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(${K3D_GLIBMM_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(${OPENGL_INCLUDE_DIR})

LINK_DIRECTORIES(${K3D_BOOST_LIB_DIRS})
LINK_DIRECTORIES(${K3D_SIGC_LIB_DIRS})

ADD_LIBRARY(k3dsdk-subdivision-surface SHARED ${HEADERS} ${SOURCES})
TARGET_LINK_LIBRARIES(k3dsdk-subdivision-surface k3dsdk)

INSTALL(TARGETS k3dsdk-subdivision-surface
	RUNTIME DESTINATION bin 
	LIBRARY DESTINATION lib
	ARCHIVE DESTINATION lib)
