PROJECT(k3dsdk-surface-polygonizer)

FILE(GLOB HEADERS *.h)
FILE(GLOB SOURCES *.cpp)

INCLUDE_DIRECTORIES(${k3d_SOURCE_DIR})
INCLUDE_DIRECTORIES(${K3D_BOOST_INCLUDE_DIRS})

LINK_DIRECTORIES(${K3D_BOOST_LIB_DIRS})
LINK_DIRECTORIES(${K3D_SIGC_LIB_DIRS})

ADD_LIBRARY(k3dsdk-surface-polygonizer SHARED ${HEADERS} ${SOURCES})
TARGET_LINK_LIBRARIES(k3dsdk-surface-polygonizer k3dsdk)

INSTALL(TARGETS k3dsdk-surface-polygonizer
	RUNTIME DESTINATION bin 
	LIBRARY DESTINATION lib
	ARCHIVE DESTINATION lib)

