MACRO(K3D_BUILD_UI_MODULE PLUGIN_NAME)
	PROJECT(${PLUGIN_NAME})

	SET(LIBRARY_OUTPUT_PATH ${k3d_BINARY_DIR}/lib/k3d/uiplugins)

	FILE(GLOB HEADERS *.h)
	FILE(GLOB SOURCES *.cpp)

	IF(CMAKE_HAS_SORT)
		LIST(SORT HEADERS)
		LIST(SORT SOURCES)
	ENDIF(CMAKE_HAS_SORT)

	ADD_LIBRARY(${PROJECT_NAME} SHARED ${HEADERS} ${SOURCES})
	SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES PREFIX "" SUFFIX ".module")

	INSTALL(TARGETS ${PROJECT_NAME}
		RUNTIME DESTINATION lib/k3d/uiplugins
		LIBRARY DESTINATION lib/k3d/uiplugins)
		
ENDMACRO(K3D_BUILD_UI_MODULE)

IF(K3D_BUILD_NGUI_MODULES)
	ADD_SUBDIRECTORY(ngui)
ENDIF(K3D_BUILD_NGUI_MODULES)

IF(K3D_BUILD_NUI_MODULE)
	ADD_SUBDIRECTORY(nui)
ENDIF(K3D_BUILD_NUI_MODULE)

IF(K3D_BUILD_PYUI_MODULE)
	ADD_SUBDIRECTORY(pyui)
ENDIF(K3D_BUILD_PYUI_MODULE)

IF(K3D_BUILD_QTUI_MODULE)
	ADD_SUBDIRECTORY(qtui)
ENDIF(K3D_BUILD_QTUI_MODULE)

